Change train icon to tram icon

--- a/app/src/main/res/layout/list_placeholder.xml
+++ b/app/src/main/res/layout/list_placeholder.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_gravity="center"
-        app:srcCompat="@drawable/ic_train"/>
+        app:srcCompat="@drawable/ic_tram"/>
 
     <TextView
         android:textSize="25sp"
